@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfdatetime],
- [20120422],
+ [20120426],
  [jbmetz@users.sourceforge.net])
 
 AC_CONFIG_SRCDIR(
